# tims-ledger

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  install.bat  package-lock.json  package.json  playwright.config.js  startup.bat
backend/: README.md  __init__.py  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202605250001_initial_accounting_schema.py  202605290001_workflow_customer_project_schema.py
backend/app/: __init__.py  backups.py  company.py  config.py  customers.py  date_utils.py  db.py  expenses.py  invoices.py  main.py  overview.py  payments.py  projects.py  reporting.py  time_entries.py
backend/app/api/: errors.py  router.py
backend/app/core/: config.py  database.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/dev/: seed.py
backend/app/models/: __init__.py  accounting.py
backend/app/schemas/: __init__.py  backups.py  balances.py  customers.py  (+8 more)
backend/tests/: __init__.py  conftest.py  test_accounting_services.py  test_app_startup.py  test_backup_api.py  test_customer_project_api.py  test_customers_api.py  test_dev_seed.py  test_expenses_api.py  test_health.py  test_import_report_api.py  test_invoice_api.py  test_invoices_api.py  test_overview_api.py  test_payment_balance_api.py  test_payments_api.py  test_projects_api.py  test_receipt_ocr_api.py  test_reporting_api.py  test_source_record_api.py  test_time_api.py
backend/windsage_ledger_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+119 files in other folders)
